# jitsdp-feature-suite

./: README.md
commit_feature_suite/: environment.yml  pyproject.toml  requirements.txt
commit_feature_suite/scripts/: run_shards.py  validate_rca_json.py
commit_feature_suite/src/commit_feature_suite/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  models.py  results.py  utils.py
commit_feature_suite/src/commit_feature_suite/affected/: __init__.py  affected_methods.py
commit_feature_suite/src/commit_feature_suite/features/: __init__.py  aggregation.py  commit_features.py  function_features.py  rca_features.py
commit_feature_suite/src/commit_feature_suite/gitops/: __init__.py  commits.py  snapshots.py
commit_feature_suite/src/commit_feature_suite/graph/: __init__.py  builder.py  callsite_extractor.py  indexes.py  method_extractor.py  resolver.py  result.py
commit_feature_suite/src/commit_feature_suite/metrics/: __init__.py  coupling.py  global_var_counter.py  rust_code_analysis.py
commit_feature_suite/src/commit_feature_suite/output/: __init__.py  csv_writer.py  schema.py  writers.py
commit_feature_suite/src/commit_feature_suite/parsers/: __init__.py  bash_parser.py  c_parser.py  cmake_parser.py  coffeescript_parser.py  cpp_parser.py  csharp_parser.py  css_parser.py  dart_parser.py  generic_parser.py  go_parser.py  groovy_parser.py  haskell_parser.py  java_parser.py  javascript_parser.py  julia_parser.py  kotlin_parser.py  language_profiles.py  lisp_parser.py  lua_parser.py  objectivec_parser.py  ocaml_parser.py  parser_common.py  php_parser.py  (+13 more)
(+18 files in other folders)
